--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
+    "formik": "^2.4.6",
     "framer-motion": "^11.1.7",
-    "next": "14.1.4",
+    "next": "^14.2.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
